[tool.poetry]
name = "lww-element-graph"
version = "0.1.0"
description = ""
authors = ["Piotr Szyma <thompson2908@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyright = "^0.0.13"
pytest-watch = "^4.2.0"
flake8 = "^4.0.1"
black = "^21.12b0"

[tool.pyright]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
